# fitness-agent

./: .gitignore  AGENTS.md  AGENTS.zh.md  README.md  pyproject.toml
app/: __init__.py
app/agent/: __init__.py  mcp_client.py  model_client.py  prompts.py  schemas.py  service.py
app/cli/: __init__.py  main.py
app/core/: __init__.py
app/core/db/: __init__.py  session.py
app/core/models/: __init__.py  activity.py  meal.py  profile.py  weight.py
app/core/schemas/: __init__.py  activity.py  common.py  meal.py  profile.py  record.py  report.py  summary.py  weight.py
app/core/services/: __init__.py  activity_service.py  meal_service.py  profile_service.py  record_service.py  report_service.py  summary_service.py  weight_service.py
app/mcp/: __init__.py  server.py
app/rag/: __init__.py
app/web/: __init__.py  schemas.py  server.py
app/web/static/: app.js  index.html  styles.css
docs/: architecture.md  architecture.zh.md  mvp.md  mvp.zh.md  setup.zh.md  user-guide.zh.md  web-chat-mvp.zh.md
docs/learning/: README.md  prompt-library.zh.md
docs/learning/stage-retrospectives/: 2026-07-19-web-chat-mvp.md
docs/stage-guides/: stage-05-record-detail-update.zh.md  stage-06-text-reports-and-trends.zh.md  stage-07-web-chat-mvp.zh.md
docs/superpowers/plans/: 2026-07-11-first-mvp-backend-tool.md  2026-07-11-history-delete-duplicate.md  2026-07-19-web-chat-mvp.md  (+4 more)
skill/: SKILL.md
skill/references/: tool-contracts.md
tests/: conftest.py  test_activity_service.py  test_agent_mcp_client.py  test_agent_service.py  test_cli.py  test_cli_commands.py  test_db_session.py  test_mcp_tools.py  test_meal_service.py  test_profile_service.py  test_record_service.py  test_report_service.py  test_skill_files.py  test_summary_service.py  test_web_chat.py  test_weight_service.py
