[project]
name = "fitness-agent"
version = "0.1.0"
description = "Local-first AI fitness and fat-loss assistant with CLI and MCP tools."
readme = "docs/mvp.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "mcp>=1.0",
    "openai>=1.0",
    "pydantic>=2.8",
    "sqlalchemy>=2.0",
    "typer>=0.12",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]
mcp = []

[project.scripts]
fitness-agent = "app.cli.main:app"
fitness-agent-mcp = "app.mcp.server:main"
fitness-agent-web = "app.web.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
